# busesyparadas

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
config/: app_config.json
deploy/nginx/: busesyparadas.conf
deploy/systemd/: busesyparadas.service
docker/: Dockerfile
src/app/: main.py
src/app/api/v1/: health.py  transit.py
src/app/core/: app_config.py  config.py  errors.py  logging.py  middleware.py
src/app/frontend/static/: app.js  manifest.webmanifest  styles.css  sw.js
src/app/frontend/templates/: index.html
src/app/models/: __init__.py  common.py  transit.py
src/app/services/: transit.py
tests/: conftest.py  test_health.py  test_transit_api.py  test_transit_service.py
